--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "axios": "^0.9.1",
     "bl": "^1.1.2",
+    "cron": "1.1.0",
     "express": "^4.13.4",
     "instagram-node": "0.5.8",
     "request": "2.69.0",
