--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
 .env
 
 # build artefacts
-/build/
+build
 
 # npm
-/node_modules/
-/npm-debug.log
-/redux-storage-*.tgz
+node_modules
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
