--- a/package.json
+++ b/package.json
@@ -23,23 +23,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "ava": "^0.13.0",
-    "babel-cli": "^6.4.0",
-    "babel-core": "^6.7.2",
-    "babel-eslint": "^5.0.0",
-    "babel-polyfill": "^6.7.2",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.4.3",
-    "eslint": "^2.4.0",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-plugin-promise": "^1.0.8",
-    "eslint-plugin-standard": "^1.3.2",
-    "estraverse-fb": "^1.3.1",
-    "release-it": "^2.3.1",
-    "sinon": "^1.17.3",
-    "sinon-as-promised": "^4.0.0",
-    "watch-cli": "^0.2.1"
+    "@mathieudutour/js-fatigue": "^1.0.2"
   },
   "dependencies": {
     "axios": "^0.9.1",
